# ml-systems-evaluation

./: .env.template  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: README.md  api-reference.md  architecture.md  compliance-standards.md  configuration.md  development.md  error-budgets.md  extending.md  getting-started.md  incident-response.md  llm-integration-guide.md  logging-guide.md  slo-configuration.md  testing.md
docs/developer/: api-reference.md  architecture.md  configuration-strategy.md  development.md  extending.md  template-strategy.md  testing.md
docs/industries/: aviation.md  energy.md  manufacturing.md  maritime.md
docs/reference/: compliance-standards.md  error-budgets.md  incident-response.md  slo-configuration.md
docs/templates/: README.md
docs/user-guides/: cli-reference.md  configuration.md  example-configurations.md  first-evaluation.md  getting-started.md  installation.md  monitoring.md  templates.md
docs_sphinx/: Makefile  README.md  build_docs.py
docs_sphinx/source/: api-usage.rst  api.rst  conf.py  configuration.rst  getting-started.rst  index.rst  installation.rst
docs_sphinx/source/developer/: api-reference.rst  architecture.rst  configuration-strategy.rst  development.rst  extending.rst  index.rst  testing.rst
docs_sphinx/source/industries/: aviation.rst  energy.rst  index.rst  manufacturing.rst  maritime.rst
docs_sphinx/source/integration/: index.rst  llm-integration.rst  logging.rst
docs_sphinx/source/reference/: compliance-standards.rst  error-budgets.rst  incident-response.rst  index.rst  slo-configuration.rst
docs_sphinx/source/user-guides/: cli-reference.rst  configuration.rst  example-configurations.rst  first-evaluation.rst  getting-started.rst  index.rst  installation.rst  monitoring.rst
examples/: README.md  agent_usage_example.py  aircraft-landing-model.yaml  aircraft-landing.yaml  api-usage-example.py  fish-classification-workflow.yaml  fish-species-classification.yaml  interpretability-edge-case-safety-example.yaml  llm-enhanced-demo.yaml  maritime-collision-avoidance.yaml  predictive-maintenance.yaml  product-demand-forecasting.yaml  semiconductor_etching_digital_twins_example.py
examples/industries/aquaculture/: README.md  fish-species-classification.yaml
examples/industries/autonomous-vehicle/: README.md  autonomous-vehicle-evaluation.yaml
examples/industries/aviation/: README.md  aircraft-landing.yaml
examples/industries/cybersecurity/: README.md  security-operations.yaml
examples/industries/energy/: README.md  energy-optimization-recommendations.yaml
examples/industries/manufacturing/: README.md  predictive-maintenance.yaml  visual-defect-detection.yaml  visual-quality-control.yaml  visual-yield-optimization.yaml
examples/industries/maritime/: README.md  collision-avoidance.yaml
examples/industries/semiconductor/: README.md  etching-digital-twins.py  etching-digital-twins.yaml
examples/industries/water/: README.md  industrial-water-treatment.yaml
examples/templates/: basic-system.yaml  business-critical.yaml  rl-agent-config.yaml  safety-critical.yaml
examples/tutorials/getting-started/: README.md
ml_eval/: __init__.py  cli.py  cli_commands.py  collectors.py  core.py  evaluators.py  examples.py  reports.py  templates.py
ml_eval/agents/: __init__.py
ml_eval/agents/alerting/: __init__.py  agent.py
ml_eval/agents/monitoring/: __init__.py  agent.py
ml_eval/agents/rl/: __init__.py  agent.py  demo_llmrlagent.py
ml_eval/agents/scheduling/: __init__.py  agent.py
ml_eval/api/: README.md  __init__.py  main.py  models.py  routes.py  service.py
ml_eval/cli/: __init__.py  commands.py  main.py
ml_eval/collectors/: __init__.py  base.py  environmental.py  multimodal.py  offline.py  online.py  regulatory.py  simulation.py
ml_eval/config/: __init__.py  factory.py  loader.py  validator.py
ml_eval/core/: __init__.py  config.py  framework.py  types.py  workflow.py  workflow_templates.py
ml_eval/evaluators/: __init__.py  base.py  compliance.py  control.py  drift.py  edge_case.py  interpretability.py  perception.py  performance.py  planning.py  reliability.py  safety.py
ml_eval/evaluators/autonomous/: __init__.py  control.py  perception.py  planning.py
ml_eval/evaluators/core/: __init__.py  compliance.py  drift.py  performance.py  reliability.py
ml_eval/evaluators/llm_enhanced/: __init__.py  edge_case.py  interpretability.py  safety.py
ml_eval/examples/: __init__.py  registry.py
ml_eval/llm/: __init__.py  analysis.py  assistant.py  enhancement.py  providers.py
ml_eval/reports/: __init__.py  base.py  business.py  compliance.py  reliability.py  safety.py
ml_eval/templates/: __init__.py  factory.py
ml_eval/utils/: __init__.py
tests/: README.md  __init__.py  check_openai_models.py  conftest.py  run_tests.py  test_api.py  test_cli.py  test_collectors.py  test_core.py  test_evaluators.py  test_integration.py  test_new_evaluators_integration.py  test_reports.py  test_rl_agent.py
(+27 files in other folders)
