[tool.poetry]
name = "ml-systems-evaluation"
version = "0.1.0"
description = "ML Systems Evaluation Framework"
authors = ["Phan Hong An <phanhongan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
PyYAML = ">=6.0.1"
requests = ">=2.31.0"
click = ">=8.1.0"
aiohttp = "^3.12.13"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.0"
black = ">=23.7.0"
flake8 = ">=6.0.0"
isort = ">=5.12.0"
mypy = ">=1.5.0"
types-PyYAML = ">=6.0.12"
types-requests = ">=2.31.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=1.3.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "ml_eval"

[tool.poetry.scripts]
ml-eval = "ml_eval.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
