[tool.poetry]
packages = [{ include = "ml_eval" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"

[project]
name = "ml-systems-evaluation"
version = "0.1.0"
description = "ML Systems Evaluation Framework"
authors = [{ name = "Phan Hong An", email = "phanhongan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "click>=8.2.1",
  "aiohttp>=3.12.13,<4.0.0"
]
packages = [{ include = "ml_eval" }]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "black>=23.7.0",
  "ruff>=0.1.0",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.31.0"
]
docs = [
  "sphinx>=8.2.3",
  "sphinx-rtd-theme>=1.3.0",
  "alabaster>=1.0.0"
]

[project.scripts]
ml-eval = "ml_eval.cli.main:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",

    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG", "PIE", "TCH", "Q", "RUF"]
ignore = ["E203", "E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Like Black, use double quotes for strings.
known-first-party = ["ml_eval"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
